# StatDataParserTestTask

./: CMakeLists.txt  README.md  fastTest.c  hashTable.c  hashTable.h  main.c  prepareMain.c  statData.c  statData.h  unitTests.c  unitTests.h
